recursion.hanoi.lessons.recursion.hanoi.HanoiBoard.scala.code
def solve(src:Int, dst:Int, other:Int) {
    solve(src,dst,other, getSlotSize(src));
}

def solve(src:Int, dst:Int, other:Int, height:Int) {
	if(n==1){
		deplace(src,dst);
	}else{
		hanoi(src,dst,other,heigh-1);
		deplace(src,dst);
		hanoi(other,dst,src,heigh-1);
	}
}
